spring-cloud-kubernetes-config-sample/k8s/manifests/configserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configserver-ingress
  namespace: default
spec:
  rules:
    - host: "configserver.anchnet.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-cloud-kubernetes-configserver
                port:
                  number: 8888
