spring-cloud-kubernetes-config-sample/k8s/manifests/discoveryserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discoveryserver-ingress
  namespace: default
spec:
  rules:
    - host: "discoveryserver.anchnet.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-cloud-kubernetes-discoveryserver
                port:
                  number: 80
